# gandiva_rust_udf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  generate_udf_registry.rs  justfile
.github/workflows/: ci.yml  release.yml
bar_func/: Cargo.toml
bar_func/src/: lib.rs
ci/scripts/: build.sh
cidr_func/: Cargo.toml
cidr_func/src/: lib.rs
conv_func/: Cargo.toml
conv_func/src/: lib.rs
format_func/: Cargo.toml
format_func/src/: lib.rs
ip_func/: Cargo.toml
ip_func/src/: lib.rs
is_ascii_func/: Cargo.toml
is_ascii_func/src/: lib.rs
num_func/: Cargo.toml
num_func/src/: lib.rs
openai_func/: Cargo.toml
openai_func/src/: lib.rs
pi_func/: Cargo.toml
pi_func/src/: lib.rs
py_func/: Cargo.toml
py_func/src/: lib.rs
rad_func/: Cargo.toml
rad_func/src/: lib.rs
scripts/: copy_bitcode.sh
strsim_func/: Cargo.toml
strsim_func/src/: lib.rs
to_hex_func/: Cargo.toml
to_hex_func/src/: lib.rs
udf_core/: Cargo.toml
udf_core/src/: lib.rs
url_func/: Cargo.toml
url_func/src/: lib.rs
uuid_func/: Cargo.toml
uuid_func/src/: lib.rs
valid_json_func/: Cargo.toml
valid_json_func/src/: lib.rs
