[package]
name = "gandiva_rust_udf"
version = "0.3.2"
edition = "2021"
authors = ["yanhuangdata"]
description = "A library for gandiva rust udfs"
documentation = "https://github.com/yanhuangdata/gandiva_rust_udf"
readme = "README.md"
homepage = "https://github.com/yanhuangdata/gandiva_rust_udf"
repository = "https://github.com/yanhuangdata/gandiva_rust_udf"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "udf_registry",
    "valid_json_func",
    "num_func",
    "is_ascii_func",
    "format_func",
    "conv_func",
    "ip_func",
    "uuid_func",
    "url_func",
    "bar_func",
]
resolver = "2"

[workspace.dependencies]
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.4" }
gandiva_rust_udf_shared = { version = "0.1.4" }
