[package]
name = "conv_func"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.1" }
gandiva_rust_udf_shared = { version = "0.1.1" }
radix_fmt = "1.0.0"
