[package]
name = "format_func"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "format_func"
path = "src/lib.rs"

[dependencies]
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.1" }
gandiva_rust_udf_shared = { version = "0.1.1" }
strfmt = "0.2.4"
