[package]
name = "openai_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.141"
gandiva_rust_udf_macro = { path = "../../gandiva_rust_udf_macro" }
openai-api-rs = "0.1.7"
tokio = "1.28.2"
