[package]
name = "pi_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = [] }
gandiva_rust_udf_macro = { version = "0.1.0" }
gandiva_rust_udf_shared = { version = "0.1.0" }
