[package]
name = "py_func"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gandiva_rust_udf_macro = { version = "0.1.1" }
gandiva_rust_udf_shared = { version = "0.1.1" }
libc = "0.2.152"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
