[package]
name = "strsim_func"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strsim = "0.11.0"
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.3" }
gandiva_rust_udf_shared = { version = "0.1.2" }