[package]
name = "udf_core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.1" }
gandiva_rust_udf_shared = { version = "0.1.1" }
pi_func = { path = "../pi_func" }
valid_json_func = { path = "../valid_json_func" }
to_hex_func = { path = "../to_hex_func" }
num_func = { path = "../num_func" }
rad_func = { path = "../rad_func" }
is_ascii_func = { path = "../is_ascii_func" }
format_func = { path = "../format_func" }
conv_func = { path = "../conv_func" }
ip_func = { path = "../ip_func" }
uuid_func = { path = "../uuid_func" }
url_func = { path = "../url_func" }
openai_func = { path = "../openai_func" }
strsim_func = { path = "../strsim_func" }
bar_func = { path = "../bar_func" }

[dev-dependencies]
serde_json = "1.0.111"
