[package]
name = "uuid_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.1" }
gandiva_rust_udf_shared = { version = "0.1.1" }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
