[package]
name = "valid_json_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0.95"
libc = "0.2.152"
gandiva_rust_udf_macro = { version = "0.1.0" }
gandiva_rust_udf_shared = { version = "0.1.0" }
